fix: update spacing to match with design

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 8px;
-  /* margin: 8px 0px; */
+  margin: 8px 0px;
 }
 
 .profile__name {
@@ -67,7 +67,6 @@ body {
 .profile__bio {
   font-size: 12px;
   font-weight: 500;
-  /* margin-top: 8px; */
 }
 
 .profile__links {
@@ -103,7 +102,7 @@ body {
   color: inherit;
   display: block;
   padding: 12px;
-  height: 48px;
+  height: 45px;
   line-height: 24px;
 }
 
